@@ -4,8 +4,49 @@ Priority: optional
 Maintainer: Debian Ruby Extras Maintainers <pkg-ruby-extras-maintainers@lists.alioth.debian.org>
 Uploaders: Antonio Terceiro <terceiro@debian.org>
 Build-Depends: debhelper (>= 9),
-               gem2deb,
-               racc
+               gem2deb (>= 0.4.0~),
+               rake,
+               rake (>= 0.8.7),
+               ruby-arel (>= 6.0),
+               ruby-arel (<< 7.0),
+               ruby-bcrypt,
+               ruby-builder (>= 3.1),
+               ruby-builder (<< 4.0),
+               ruby-bundler (>= 1.3.0),
+               ruby-bundler (<< 2.0),
+               ruby-dalli,
+               ruby-delayed-job,
+               ruby-erubis (>= 2.7.0),
+               ruby-erubis (<< 2.8),
+               ruby-globalid,
+               ruby-i18n (>= 0.7),
+               ruby-i18n (<< 1.0),
+               ruby-json (>= 1.7.7),
+               ruby-json (<< 2.0),
+               ruby-mail (>= 2.5.4),
+               ruby-minitest (>= 5.1),
+               ruby-minitest (<< 6.0),
+               ruby-mocha,
+               ruby-mysql2,
+               ruby-rack (>= 1.6),
+               ruby-rack (<< 2.0),
+               ruby-rack-cache,
+               ruby-rack-test (>= 0.6.2),
+               ruby-rack-test (<< 0.7),
+               ruby-rails-dom-testing (>= 1.0.5),
+               ruby-rails-dom-testing (<< 2.0),
+               ruby-rails-html-sanitizer (>= 1.0.2),
+               ruby-rails-html-sanitizer (<< 2.0),
+               ruby-sprockets-rails (>= 2.1.3-1~),
+               ruby-sprockets-rails (<< 3.0),
+               ruby-sqlite3,
+               ruby-thor (>= 0.18.1),
+               ruby-thor (<< 2.0),
+               ruby-thread-safe (>= 0.3.4),
+               ruby-thread-safe (<< 1.0),
+               ruby-treetop,
+               ruby-tzinfo (>= 1.1),
+               ruby-tzinfo (<< 2.0),
 Standards-Version: 3.9.7
 Vcs-Git: https://anonscm.debian.org/git/pkg-ruby-extras/rails.git
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-ruby-extras/rails.git
