@@ -1,2 +1,5 @@
 Tests: newapp
 Restrictions: allow-stderr, needs-recommends
+
+Test-Command: gem2deb-test-runner --autopkgtest --check-dependencies 2>&1
+Depends: @, gem2deb-test-runner
